<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mahdiyar.ir.marketpanel.ui.EditCategoryActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/category_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/image_placeholder" />

    <TextView
        android:id="@+id/add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:text="@string/add_picture"
        android:textColor="@color/link" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="75dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_name" />

        <EditText
            android:id="@+id/category_edt"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="17dp"
            android:background="#FFF"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/add_category_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_bg"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/add_category"
        android:textColor="@color/white" />

</LinearLayout>
